--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
   },
   "jspm": {
     "directories": {
-      "baseURL": "content/lib",
-      "packages": "output/quaint/lib/jspm_packages"
+      "baseURL": "output/quaint/lib"
     },
     "dependencies": {
       "earlgrey-runtime": "npm:earlgrey-runtime@^0.0.10",
       "jquery": "github:components/jquery@^2.1.4",
       "lodash.throttle": "npm:lodash.throttle@^3.0.4",
-      "quaint": "npm:quaint@^0.0.6",
-      "quaint-highlight": "npm:quaint-highlight@^0.0.0",
-      "quaint-javascript": "npm:quaint-javascript@^0.0.1",
+      "quaint": "npm:quaint@^0.0.7",
+      "quaint-highlight": "npm:quaint-highlight@^0.0.1",
+      "quaint-javascript": "npm:quaint-javascript@^0.0.3",
       "vm": "github:jspm/nodelibs-vm@^0.1.0"
     },
     "devDependencies": {}
