putting config.js back in content

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "jspm": {
     "directories": {
-      "baseURL": "output/quaint/lib"
+      "baseURL": "content/lib",
+      "packages": "output/quaint/lib/jspm_packages"
     },
     "dependencies": {
       "earlgrey-runtime": "npm:earlgrey-runtime@^0.0.10",
